all sections are no longer overlapping

--- a/css/main.css
+++ b/css/main.css
@@ -96,6 +96,7 @@ p {
 .feat {
   background-color: #b8b8b8;
   text-align: center;
+  overflow: hidden;
 }
 
 .feat h2 {
@@ -142,32 +143,44 @@ p {
   margin-top: 1rem;
 }
 
-.re-button h3 {
-  margin-bottom: 0;
-  margin-top: 1.7rem;
-}
-
 .re-button {
-  color: white;
-  background-color: #333;
-  padding: 1rem;
-  margin: 3%;
+  position: relative;
 }
 
 .identity {
-  background-color: #787878;
   overflow: hidden;
-  margin: 3%;
+  position: relative;
 }
 
+.re-button h3{
+  position: absolute;
+  bottom: .15rem;
+}
+
+.identity img {
+  width: 100%;
+  display: block;
+  overflow: hidden;
+  padding-top: .6rem;
+}
+
+.identity div {
+  position: absolute;
+  bottom: 1rem;
 }
 
 .see-through-box {
   float: left;
   background-color: rgba(120, 120, 120, .6);
-  margin-top: 3rem;
 }
 
 h3 {
   font-variant: small-caps;
+}
+
+.re-button img {
+  width: 100%;
+  display: block;
+  overflow: hidden;
+  padding-top: .6rem;
 }
